--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@ body {
     display: flex;
 
     flex-direction: column;
-    
-    position: absolute;
     margin-top: 0;
     margin-left: 0;
 
@@ -11,7 +9,7 @@ body {
     align-items: center;
 
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 canvas {
